# cityfellowtravelers

./: .gitignore  README.md
client/: CMakeLists.txt  qml.qrc
client/android/: AndroidManifest.xml  build.gradle
client/android/res/values-en/: strings.xml
client/android/res/values-uk/: strings.xml
client/cpp/: commonDataStructures.cpp  commonDataStructures.h  functions.cpp  functions.h  main.cpp  routedrawing.cpp  routedrawing.h  servercommunicator.cpp  servercommunicator.h  touandppmanager.cpp  touandppmanager.h  tripsmanager.cpp  tripsmanager.h  valuesaver.cpp  valuesaver.h
client/i18n/: city_fellow_travelers_en.ts  city_fellow_travelers_ru.qm  city_fellow_travelers_ru.ts
client/i18n/scripts/: lrelease.sh  lupdate.sh
client/qml/: main.qml
client/qml/components/forMap/: MapMarker_my.qml
client/qml/components/forOptionsMenu/: OM_acceptanceOfTerms_my.qml  OM_busyIndicator_my.qml  OM_checkBox_my.qml  OM_comboBox_my.qml  OM_refreshButton_my.qml  OM_routeSwitcher_my.qml  OM_sectionDescription_my.qml  OM_sectionHeading_my.qml  OM_section_my.qml  OM_slider_my.qml  OM_spinBox_my.qml  OM_textEdit_my.qml  OM_textInput_my.qml  OM_textInput_time_my.qml  OM_text_my.qml  OM_undoOrRedoButton_my.qml  ObjectModel_page03_optionsMenu_my.qml  ObjectModel_page04_optionsMenu_my.qml  Row_page02_field3_my.qml
client/qml/components/forPage5/: MyTripsViewElement_my.qml
client/qml/components/forTerms/: LanguageSwitcher_my.qml  TermsElement_my.qml
client/qml/components/forWholeProject/: AdditionalComponents_my.qml  Button_turquoise_my.qml  MouAreaWSCH.qml  TextInput_standard_my.qml  Text_standard_my.qml
client/qml/pages/: Page01.qml  Page02.qml  Page03.qml  Page04.qml  Page05.qml
client/qml/windows/: Map_my.qml  Terms_my.qml  WindowWithText_my.qml
server/: CMakeLists.txt
server/cpp/: datahandler.cpp  datahandler.h  main.cpp  networkconnector.cpp  networkconnector.h  requestcounttracker.cpp  requestcounttracker.h  squaremanager.cpp  squaremanager.h  timecout.cpp  timecout.h
server/lib/Qt-Secret/: linkToTheLibraryWhichShouldBeHere.txt
